Updates index.html and style.css: 1. new <div> with  container-carousel class added inside the expo id to target the contents more easily while styling, 2.expo-container and form-container classes  changed to container-expo and container-form in order to ensure similar naming pattern is follow which help to identify the contents easily while styling. 3. added padding-top and padding bottom to container-carousel and  container-expo to utilize the white space on the pages evenly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,9 +110,14 @@ body{
     background: #43658b;
 }
 
+.container-carousel{
+    padding-top: 10%;
+    padding-bottom: 20%;
+}
+
 .heading-info{
-    padding-top: 5%;
-    margin-bottom: 3%;
+    /* padding-top: 5%;
+    margin-bottom: 3%; */
     text-align: center;
 }
 
@@ -165,8 +170,9 @@ body{
    background-color: #ed6663;
 }
 
-.expo-container{
+.container-expo{
 padding-top: 7em;
+padding-bottom: 10%;
 }
 
 .heading-places{
@@ -212,11 +218,12 @@ padding-top: 7em;
     background: url("../images/village.jpg");
     }
 
-.form-container{
+.container-form{
     position: relative;
-    height: 70vh;
     width: 100%;
     padding-left: 0;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .form-row{
